--- a/config/authentication/dex/vsphere/ldap/06-service.yaml
+++ b/config/authentication/dex/vsphere/ldap/06-service.yaml
@@ -1,3 +1,5 @@
+#@ load("@ytt:data", "data")
+---
 kind: Service
 apiVersion: v1
 metadata:
@@ -6,7 +8,7 @@ metadata:
   labels:
     app: dex
 spec:
-  type: NodePort
+  type: #@ data.values.dex_service_type
   ports:
     - name: "dex"
       protocol: TCP
