--- a/config/authentication/gangway/vsphere/03-secret.yaml
+++ b/config/authentication/gangway/vsphere/03-secret.yaml
@@ -1,3 +1,6 @@
+#@ load("@ytt:data", "data")
+#@ load("@ytt:base64", "base64")
+---
 apiVersion: v1
 kind: Secret
 metadata:
@@ -6,8 +9,7 @@ metadata:
 type: Opaque
 data:
   # openssl rand -base64 32 | pbcopy
-  sesssionKey: zzzzz
+  sesssionKey: #@ data.values.gangway_session_key_base64
   # clientSecret=$(openssl rand -base64 32)
   # echo -n "$clientSecret" | base64
-  clientSecret: zzzz
-
+  clientSecret: #@ base64.encode(data.values.gangway_client_secret)
